[gd_scene load_steps=7 format=2]

[ext_resource path="res://gold.gd" type="Script" id=1]
[ext_resource path="res://assets/holes/gold/gold.png" type="Texture" id=2]
[ext_resource path="res://scenes/bye.gd" type="Script" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 230.507, 642.964 )

[sub_resource type="Animation" id=2]
resource_name = "go"
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 64.268, 54.7859 )

[node name="psoion" type="Area2D"]
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
modulate = Color( 1, 1, 1, 0 )
texture = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/go = SubResource( 2 )

[node name="bonc" type="Area2D" parent="."]
script = ExtResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="bonc"]
position = Vector2( 0, 177.649 )
shape = SubResource( 3 )

[node name="bye" type="Timer" parent="."]
wait_time = 20.0
one_shot = true
[connection signal="body_entered" from="." to="." method="_on_psoion_body_entered"]
[connection signal="screen_entered" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_entered"]
[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]
[connection signal="body_entered" from="bonc" to="." method="_on_bonc_body_entered"]
[connection signal="timeout" from="bye" to="." method="_on_bye_timeout"]
